apps/base/media/sonarr/httproute.yaml
# yaml-language-server: $schema=https://ctrl-research.github.io/k8s-schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-internal
  annotations:
    gatus.home-operations.com/enabled: "true"
    # sidecar defaults HTTPRoutes to https; envoy-internal is http-only
    gatus.home-operations.com/endpoint: |
      group: Media
      url: http://sonarr.j6n.internal
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
  hostnames:
  - sonarr.j6n.internal
  rules:
  - backendRefs:
    - name: sonarr
      port: 8989
